Add Public dir and Link work page

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Todo List on EJS!!!</title>
 </head>
 <body>
-    <% if (kindOfDay === "Saturday" || kindOfDay === "Sunday") { %>
-        <h1 style="color: purple;"><%= kindOfDay %> ToDo List 💜</h1>
-    <% } else { %>
-        <h1 style="color: blue;"><%= kindOfDay %> ToDo List 💙</h1>
-    <% } %>
-    <p><%= day %></p>
-    <form action="/" method="POST">
-        <input type="text" name="todo" placeholder="What to do?">
-        <button type="submit">Save</button>
-    </form>
-    <ul>
-        <li>Eat Breakfast</li>
-        <li>Eat Lunch</li>
-        <li>Eat Dinner</li>
-        <% for (let i=0; i<newList.length; i++) { %>
-            <li><%= newList[i] %></li>
-        <% } %>
-    </ul>
+    <div class="box" id="heading">
+            <h1 style="color: purple;"><%= listTitle %>💜</h1>
+    </div>
+    <div class="box">
+        
+            <!-- <li>Eat Breakfast</li>
+            <li>Eat Lunch</li>
+            <li>Eat Dinner</li> -->
+            <% for (let i=0; i<newList.length; i++) { %>
+                <div class="item">
+                    <input type="checkbox">
+                    <p><%= newList[i] %></p>
+                </div>
+            <% } %>
+            <form class="item" action="/" method="POST">
+                <input type="text" name="todo" placeholder="What to do?" autocomplete="off">
+                <button type="submit" name="list" value=<%= listTitle %> >+</button>
+            </form>
+    </div>
+    
 </body>
 </html>
