Apply EJS layout

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Todo List on EJS!!!</title>
-</head>
-<body>
+<%- include('header') -%>
+
     <div class="box" id="heading">
             <h1 style="color: purple;"><%= listTitle %>💜</h1>
     </div>
@@ -23,9 +16,9 @@
             <% } %>
             <form class="item" action="/" method="POST">
                 <input type="text" name="todo" placeholder="What to do?" autocomplete="off">
-                <button type="submit" name="list" value=<%= listTitle %> >+</button>
+                <button type="submit" name="list" value="<%= listTitle %>" >+</button>
             </form>
     </div>
-    
-</body>
-</html>
+    <a href="/about">About</a>
+
+<%- include('footer') -%>
