--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,12 +8,12 @@
             <!-- <li>Eat Breakfast</li>
             <li>Eat Lunch</li>
             <li>Eat Dinner</li> -->
-            <% for (let i=0; i<newList.length; i++) { %>
+            <% newList.forEach(item => { %>
                 <div class="item">
                     <input type="checkbox">
-                    <p><%= newList[i] %></p>
+                    <p><%= item.name %></p>
                 </div>
-            <% } %>
+            <% }) %>
             <form class="item" action="/" method="POST">
                 <input type="text" name="todo" placeholder="What to do?" autocomplete="off">
                 <button type="submit" name="list" value="<%= listTitle %>" >+</button>
