Apply Delete func on DB

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,10 +9,12 @@
             <li>Eat Lunch</li>
             <li>Eat Dinner</li> -->
             <% newList.forEach(item => { %>
-                <div class="item">
-                    <input type="checkbox">
-                    <p><%= item.name %></p>
-                </div>
+                <form action="/delete" method="post">
+                    <div class="item">
+                        <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
+                        <p><%= item.name %></p>
+                    </div>
+                </form>
             <% }) %>
             <form class="item" action="/" method="POST">
                 <input type="text" name="todo" placeholder="What to do?" autocomplete="off">
