--- a/views/list.ejs
+++ b/views/list.ejs
@@ -14,6 +14,7 @@
                         <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
                         <p><%= item.name %></p>
                     </div>
+                    <input type="hidden" name="listForDelete" value="<%= listTitle %>">
                 </form>
             <% }) %>
             <form class="item" action="/" method="POST">
